# AI-DesktopCompanion

./: .gitignore
ai_pet/: CMakeLists.txt  config.example.json  main.cpp
ai_pet/ai/: affinity.cpp  affinity.h  fallback_personality.cpp  fallback_personality.h  gemma.cpp  gemma.h  persona_loader.cpp  persona_loader.h  personality.cpp  personality.h  prompt.cpp  prompt.h  strategy.cpp  strategy.h
ai_pet/config/: config.cpp  config.h
ai_pet/controller/: application.cpp  application.h  brain.cpp  brain.h  module_registry.cpp  module_registry.h  session.cpp  session.h
ai_pet/data/: memory.db
ai_pet/logger/: logger.cpp  logger.h
ai_pet/memory/: sqlite.cpp  sqlite.h
ai_pet/models/: emotion-ferplus-8.onnx
ai_pet/personas/default/: memories.md  meta.json  persona.md
ai_pet/personas/zijingongzhu/: SKILL.md  memories.md  meta.json  persona.md
ai_pet/ui/: ui.cpp  ui.h
ai_pet/ui/assets/pet/white/happy/: dog_white_happy.h  dog_white_happy_0.c  dog_white_happy_1.c  dog_white_happy_2.c  dog_white_happy_3.c  dog_white_happy_4.c  dog_white_happy_5.c
ai_pet/ui/assets/pet/white/idle/: dog_white_idle.h  dog_white_idle_0.c  dog_white_idle_1.c  dog_white_idle_2.c  dog_white_idle_3.c
ai_pet/ui/assets/pet/white/sad/: dog_white_sad.h  dog_white_sad_0.c  dog_white_sad_1.c  dog_white_sad_2.c  dog_white_sad_3.c
ai_pet/vision/: camera.cpp  camera.h  emotion.cpp  emotion.h  face.cpp  face.h  vision_pipeline.cpp  vision_pipeline.h
docs/: AI 桌面宠物 UI 模块设计文档.md  像素宠物与聊天背景方案.md  开发文档.md  目录结构.md  线条小狗动画制作工作流.md  线条小狗美术资源制作规范.md  语音克隆部署方案.md
tools/stream/: run_h264.bat  stream.ps1  stream_h264.ps1
